add stok opname

--- a/aset/css/style.css
+++ b/aset/css/style.css
@@ -39,6 +39,14 @@ main {
   font-style: italic;
 }
 
+.opname th {
+  border: 1px solid black;
+}
+
+.opname td {
+  border: 1px solid black;
+}
+
 footer  {
   padding: 10px;
 }
